stage: front end basic form completed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fwwwb",
+  "name": "null-ragpicker-front",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "sq <sq.ahu.edu@gmail.com>",
