--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "scss": "^0.2.4",
     "scss-loader": "0.0.1",
     "vue": "^2.5.2",
+    "vue-baidu-map": "^0.21.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
